--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -41,6 +42,7 @@
     "@supabase/supabase-js": "^2.39.8",
     "@types/next-auth": "^3.13.0",
     "@types/node": "20.6.2",
+    "@types/pg": "^8.11.10",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -57,6 +59,7 @@
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "pg": "^8.13.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
